# avm

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  format_code.py
docs/: INSTALLATION.md  SAMPLE_DATA.md  TECHNICAL_SPECS.md
src/: avm.cpp  common.h  corner_detector.cpp  corner_detector.h  stitcher.cpp  stitcher.h  undistort.cpp  undistort.h  utils.cpp  utils.h
